[package]
name = "dedicated_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
log = "0.4.17"
once_cell = { version = "1.17", features = ["parking_lot"] }
parking_lot = "0.12"
pin-project = "1.0"
prometheus_metrics = { workspace = true }
tokio = { version = "1.25" }
tokio-util = { version = "0.7.4" }

# use libc on unix like platforms to set worker priority in DedicatedExecutor
[target."cfg(unix)".dependencies.libc]
version = "0.2"
